# py-seedwork

./: .gitignore  README.md  pyproject.toml
domain/exception/: __init__.py
domain/query/handler/: __init__.py  query_handler.py
domain/repository/: repository.py
domain/value_object/: __init__.py  entity_props.py
src/seedwork/domain/command/handler/: command_handler.py
src/seedwork/domain/entity/: entity.py
src/seedwork/domain/event/handler/: event_handler.py
src/seedwork/domain/factory/: factory.py
src/seedwork/domain/value_object/: value_object.py
src/seedwork/mixin/: entity_props.py
src/seedwork/util/: event_manager.py  module.py  notification_manager.py
